# Space_project_SEM2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  entryPoint.cpp  sourceFile.cpp  sources.cpp
.plan/: Object Diagram.drawio  plan.md  smth.cpp
SFML-build/: CMakeCache.txt  Makefile  SFMLStaticTargets.cmake  cmake_install.cmake  install_manifest.txt
SFML-build/src/SFML/: Makefile  cmake_install.cmake
SFML-build/src/SFML/Audio/: Makefile  cmake_install.cmake
SFML-build/src/SFML/Graphics/: Makefile  cmake_install.cmake
SFML-build/src/SFML/Main/: Makefile  cmake_install.cmake
SFML-build/src/SFML/Network/: Makefile  cmake_install.cmake
SFML-build/src/SFML/System/: Makefile  cmake_install.cmake
SFML-build/src/SFML/Window/: Makefile  cmake_install.cmake
Testing/: SFML_Example.cpp
include/: conv.h  inventory.h  item.h  menu.h  npc.h  player.h  room.h
include/item_class_header/: apparel.h  consumable.h  item.h  weapon.h
include/quest_class_header/: fetch.h  quest.h
src/: conv.cpp  inventory.cpp  item.cpp  main.cpp  menu.cpp  npc.cpp  player.cpp  room.cpp
src/item_class_src/: apparel.cpp  consumable.cpp  item.cpp  weapon.cpp
src/quest_class_src/: fetch.cpp  quest.cpp
